--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "homepage": "https://github.com/ScriptoNaughts/Scriptomatics#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "connect-session-sequelize": "^7.1.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.4",
+    "express-session": "^1.17.3",
     "mysql2": "^3.2.0",
     "sequelize": "^6.30.0",
     "sqlite3": "^5.1.6"
